[ECCI-520] new news teaser and other layout issues

--- a/themes/custom/essex/css/news.css
+++ b/themes/custom/essex/css/news.css
@@ -278,29 +278,36 @@ div:has(.featured-teaser),
 }
 
 .paragraph--type--news-1-4 .news-card article,
-.paragraph--type--news-1-4 .featured-news__card article {
+.paragraph--type--news-1-4 .featured-news__card article,
+.paragraph--type--localgov-newsroom-teaser2 .news-card article,
+.paragraph--type--localgov-newsroom-teaser2 .featured-news__card article {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
-.paragraph--type--news-1-4 .news-card {
+.paragraph--type--news-1-4 .news-card,
+.paragraph--type--localgov-newsroom-teaser2 .news-card {
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 1rem;
     grid-auto-rows: auto !important
 }
 
-.paragraph--type--news-1-4 article .card-image {
+.paragraph--type--news-1-4 article .card-image,
+.paragraph--type--localgov-newsroom-teaser2 article .card-image {
     grid-column: 1/2 !important;
 }
 
 .paragraph--type--news-1-4 .featured-news__card article .card-content,
-.paragraph--type--news-1-4 .news-card article .card-content {
+.paragraph--type--news-1-4 .news-card article .card-content,
+.paragraph--type--localgov-newsroom-teaser2 .featured-news__card article .card-content,
+.paragraph--type--localgov-newsroom-teaser2 .news-card article .card-content {
     grid-column: 2/3 !important;
     height: 100%;
 }
 
 @media screen and (min-width: 768px) {
+
     .paragraph--type--news-1-4 {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -308,7 +315,8 @@ div:has(.featured-teaser),
         gap: var(--spacing);
     }
 
-    .paragraph--type--news-1-4 .news-card {
+    .paragraph--type--news-1-4 .news-card,
+    .paragraph--type--localgov-newsroom-teaser2 .news-card {
         display: grid;
         grid-column: 2 / 3;
         grid-template-columns: 1fr 1fr;
@@ -316,7 +324,8 @@ div:has(.featured-teaser),
         grid-gap: 1rem;
     }
 
-    .paragraph--type--news-1-4 .featured-news__card {
+    .paragraph--type--news-1-4 .featured-news__card,
+    .paragraph--type--localgov-newsroom-teaser2 .featured-news__card {
         grid-column: 1 / 2;
 
     }
@@ -326,22 +335,27 @@ div:has(.featured-teaser),
     }
 
     .paragraph--type--news-1-4 .featured-news__card article,
-    .paragraph--type--news-1-4 .news-card article {
+    .paragraph--type--news-1-4 .news-card article,
+    .paragraph--type--localgov-newsroom-teaser2 .featured-news__card article,
+    .paragraph--type--localgov-newsroom-teaser2 .news-card article {
         display: flex;
         flex-direction: column;
         grid-template-columns: 1fr;
     }
 
-    .paragraph--type--news-1-4 .featured-news__card .card-image img {
+    .paragraph--type--news-1-4 .featured-news__card .card-image img,
+    .paragraph--type--localgov-newsroom-teaser2 .featured-news__card .card-image img {
         position: static;
         aspect-ratio: auto;
     }
 
-    .paragraph--type--news-1-4 .featured-news__card .card-content {
+    .paragraph--type--news-1-4 .featured-news__card .card-content,
+    .paragraph--type--localgov-newsroom-teaser2 .featured-news__card .card-content {
         height: 100%;
     }
 
-    .paragraph--type--news-1-4 .news-card .card-image img {
+    .paragraph--type--news-1-4 .news-card .card-image img,
+    .paragraph--type--localgov-newsroom-teaser2 .news-card .card-image img {
         aspect-ratio: 41 / 30;
     }
 
@@ -350,7 +364,8 @@ div:has(.featured-teaser),
     }
 }
 
-.paragraph--type--news-1-4 .card-image img {
+.paragraph--type--news-1-4 .card-image img,
+.paragraph--type--localgov-newsroom-teaser2 .card-image img {
     width: 100%;
     aspect-ratio: 41 / 30;
     object-fit: cover;
@@ -371,4 +386,8 @@ a+i {
 
 .news-article__content>*+* {
     margin-top: var(--spacing);
+}
+
+.views-view-grid .views-col {
+    float: unset;
 }
